Another idea of models + view

--- a/templates/main1.html
+++ b/templates/main1.html
@@ -77,7 +77,7 @@ fieldset.inline-block{
     {% csrf_token %}
 
     ФИО:<br>
-    <input type="text" name="name"><br>
+    <input type="text" name="emp_name"><br>
     Телефон:<br>
     <input type="text" name="telephone"><br>
 
