--- a/templates/main1.html
+++ b/templates/main1.html
@@ -45,7 +45,7 @@
 
     {% for employee in employees %}
 <br>
-        {{ employee.department }}
+       {{ employee }} --- {{ employee.tel_work_escape }} --- {{ employee.division }} --- {{ employee.department }} --- {{ employee.prosecutors_office }}
 
     {% endfor %}
 
