--- a/templates/filter_header.html
+++ b/templates/filter_header.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<table align="center">
+    <form name="filter" action="/t/" method="GET" accept-charset="UTF-8" autocomplete="off">
 
-</body>
-</html>
+        <tr>
+            <th>Поиск по ФИО</th>
+            <th>Фильтрация по прокуратуре</th>
+        </tr>
+        <tr>
+            <th><input type="text" name="employee"></th>
+            <th><input type="text" name="prosecutors_office"></th>
+        </tr>
+        <tr>
+            <th>Телефон</th>
+            <th>Управление</th>
+        </tr>
+        <tr>
+            <th><input type="text" name="telephone"></th>
+            <th><input type="text" name="department"></th>
+        </tr>
+        <tr>
+            <th></th>
+            <th>Отдел</th>
+        </tr>
+        <tr>
+            <th><input type="submit" align="right" value="Поиск"></th>
+            <th><input type="text" name="division"></th>
+        </tr>
+
+
+    </form>
+</table>
