--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -4,4 +4,4 @@
     <td width='10%' title='Должность'>{{ employee.position }}</td>
     <td width='15%' title='Служебный телефон'>{{ employee.tel_work_escape|safe }}</td>
     <td width='15%' title='Мобильный телефон'>{{ employee.private_telephone|safe }}</td>
-</tr>
+</tr><!-- Table Data -->
