Add 1 sort,  need one more with surname after position. Add button(doesn't work)

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,12 +13,7 @@
     {% block left %}{% endblock %}
     {% block right %}{% endblock %}
     {% block content %}{% endblock %}
-
-    {% block footer %}
-
-        <hr>
-        <p>FOOTER</p>
-    {% endblock %}
+    {% block footer %}{% endblock %}
 </section>
 </body>
 </html>
