--- a/templates/filter_header.html
+++ b/templates/filter_header.html
@@ -1,6 +1,5 @@
-<table align="center">
-    <form name="filter" action="/t/" method="GET" accept-charset="UTF-8" autocomplete="off">
-
+<form name="filter" action="/t/" method="GET" accept-charset="UTF-8" autocomplete="off">
+    <table align="center">
         <tr>
             <th>Поиск по ФИО</th>
             <th>Фильтрация по прокуратуре</th>
@@ -8,6 +7,7 @@
         <tr>
             <th><input type="text" name="employee"></th>
             <th><input type="text" name="prosecutors_office"></th>
+            <th><input type="reset" value="Очистить"></th>
         </tr>
         <tr>
             <th>Телефон</th>
@@ -16,6 +16,11 @@
         <tr>
             <th><input type="text" name="telephone"></th>
             <th><input type="text" name="department"></th>
+            <th>
+                <button>Кнопка с текстом</button>
+
+
+            </th>
         </tr>
         <tr>
             <th></th>
@@ -26,6 +31,5 @@
             <th><input type="text" name="division"></th>
         </tr>
 
-
-    </form>
-</table>
+    </table>
+</form>
