Add changes to view, need to make structure in view.

--- a/templates/filter_header.html
+++ b/templates/filter_header.html
@@ -1,4 +1,4 @@
-<form name="filter" action="/t/" method="GET" accept-charset="UTF-8" autocomplete="off">
+<form name="filter" action="/" method="GET" accept-charset="UTF-8" autocomplete="off">
     <table align="center">
         <tr>
             <th>Поиск по ФИО</th>
