Add docs, change view functions, some small changes

--- a/templates/filter_header.html
+++ b/templates/filter_header.html
@@ -16,15 +16,15 @@
         <tr>
             <th><input type="text" name="telephone"></th>
             <th><input type="text" name="department"></th>
+            <th><input type="submit" value="Поиск"></th>
         </tr>
         <tr>
-            <th></th>
+            <th>Должность</th>
             <th>Отдел</th>
         </tr>
         <tr>
-            <th><input type="submit" align="right" value="Поиск"></th>
+            <th><input type="text" name="position"></th>
             <th><input type="text" name="division"></th>
         </tr>
-
     </table>
 </form>
