--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load app_filters %}
 
 {% block title %}Прокуратура Одеської області{% endblock %}
 
@@ -6,14 +7,76 @@
     {% include filter_header %}
 {% endblock %}
 
-{% block content %}
 
-    {% if employees %}
-        <table class="simple-little-table" cellspacing='0'>
-        {% include table_header %}
-        {% for employee in employees %}
-            {% include table_loop %}
+
+
+{% block content %}
+    {% for po in employees_dict %}
+        <h2>{{ po }}</h2>
+
+
+
+        {% if employees_dict|tel_get:po|tel_get:'employees' %}
+
+            <table class="simple-little-table" cellspacing='0'>
+
+                {% include table_header %}
+                {% for employee in employees_dict|tel_get:po|tel_get:'employees' %}
+                    {% include table_loop %}
+                {% endfor %}
+
+            </table>
+
+        {% endif %}
+
+        {% for department in employees_dict|tel_get:po|tel_get:'departments' %}
+
+            <h3>{{ department }}</h3>
+
+            {% if employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'employees' %}
+
+                <table class="simple-little-table" cellspacing='0'>
+
+                    {% include table_header %}
+                    {% for employee in employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'employees' %}
+                        {% include table_loop %}
+                    {% endfor %}
+
+                </table>
+
+            {% endif %}
+
+            {% for division in employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'divisions' %}
+
+                <h4>{{ division }}</h4>
+
+                <table class="simple-little-table" cellspacing='0'>
+
+                    {% include table_header %}
+                    {% for employee in employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'divisions'|tel_get:division %}
+                        {% include table_loop %}
+                    {% endfor %}
+                </table>
+            {% endfor %}
         {% endfor %}
-        </table>
-    {% endif %}
+
+
+
+        {% for division in employees_dict|tel_get:po|tel_get:'divisions' %}
+            <h4>{{ division }}</h4>
+            <table class="simple-little-table" cellspacing='0'>
+
+                {% include table_header %}
+                {% for employee in employees_dict|tel_get:po|tel_get:'divisions'|tel_get:division %}
+                    {% include table_loop %}
+                {% endfor %}
+            </table>
+        {% endfor %}
+
+
+
+
+
+    {% endfor %}
+
 {% endblock %}
