--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load app_filters %}
 
-{% block title %}Прокуратура Одеської області{% endblock %}
+{% block title %}Прокуратура Одесской области{% endblock %}
 
 {% block header %}
     {% include filter_header %}
