--- a/templates/main2.html
+++ b/templates/main2.html
@@ -1,82 +1,39 @@
 {% extends "base.html" %}
-{% load app_filters %}
 
-{% block title %}Прокуратура Одеської області{% endblock %}
-
-{% block header %}
-    {% include filter_header %}
-{% endblock %}
-
-
-
+{% block title %}Структура{% endblock %}
 
 {% block content %}
-    {% for po in employees_dict %}
-        <h2>{{ po }}</h2>
+
+
+    {% for proc in po %}
+
+        {{ proc }}<br>
+
+
+        {% for department in proc.department_set.all %}
+
+            {{ department }}<br>
 
 
 
-        {% if employees_dict|tel_get:po|tel_get:'employees' %}
+            {% for division in department.division_set.all %}
+                {{ division }}<br>
 
-            <table class="simple-little-table" cellspacing='0'>
-
-                {% include table_header %}
-                {% for employee in employees_dict|tel_get:po|tel_get:'employees' %}
-                    {% include table_loop %}
-                {% endfor %}
-
-            </table>
-
-        {% endif %}
-
-        {% for department in employees_dict|tel_get:po|tel_get:'departments' %}
-
-            <h3>{{ department }}</h3>
-
-            {% if employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'employees' %}
-
-                <table class="simple-little-table" cellspacing='0'>
-
-                    {% include table_header %}
-                    {% for employee in employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'employees' %}
-                        {% include table_loop %}
-                    {% endfor %}
-
-                </table>
-
-            {% endif %}
-
-            {% for division in employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'divisions' %}
-
-                <h4>{{ division }}</h4>
-
-                <table class="simple-little-table" cellspacing='0'>
-
-                    {% include table_header %}
-                    {% for employee in employees_dict|tel_get:po|tel_get:'departments'|tel_get:department|tel_get:'divisions'|tel_get:division %}
-                        {% include table_loop %}
-                    {% endfor %}
-                </table>
             {% endfor %}
+
         {% endfor %}
 
+        {% for division in proc.division_set.all %}
+            {{ division }}<br>
 
-
-        {% for division in employees_dict|tel_get:po|tel_get:'divisions' %}
-            <h4>{{ division }}</h4>
-            <table class="simple-little-table" cellspacing='0'>
-
-                {% include table_header %}
-                {% for employee in employees_dict|tel_get:po|tel_get:'divisions'|tel_get:division %}
-                    {% include table_loop %}
-                {% endfor %}
-            </table>
         {% endfor %}
-
 
 
 
 
     {% endfor %}
+
+
+
 
 {% endblock %}
