Create template for structure, change css

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,10 @@
 
 {% block title %}Прокуратура Одесской области{% endblock %}
 
+
+
 {% block header %}
+    <p align="right"><a href="/tree/" target="_blank">Структура</a></p>
     {% include filter_header %}
 {% endblock %}
 
