--- a/media/css/style.css
+++ b/media/css/style.css
@@ -122,9 +122,9 @@
 	font-family: 'Orienta', sans-serif;
 	font-size: 30px;
 	line-height: 40px;
-	border-bottom: 1px solid #fff;
-	box-shadow: 0 1px 0 rgba(0,0,0,0.1);
-	padding-bottom: 10px;
+	/*border-bottom: 1px solid #fff;*/
+	/*box-shadow: 0 1px 0 rgba(0,0,0,0.1);*/
+	/*padding-bottom: 10px;*/
 }
 
 .main h3 {
