--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -3,5 +3,5 @@
     <td width='20%'>{{ employee }}</td>
     <td width='10%' title='Должность'>{{ employee.position }}</td>
     <td width='15%' title='Служебный телефон'>{{ employee.tel_work_escape|safe }}</td>
-    <td width='15%' title='Мобильный телефон'>{{ employee.private_telephone|safe }}</td>
+    <td width='15%' title='Мобильный телефон'>{{ employee.tel_private_escape|safe }}</td>
 </tr><!-- Table Data -->
