--- a/templates/filter_header.html
+++ b/templates/filter_header.html
@@ -10,8 +10,8 @@
         <tr>
             <th><input type="text" name="employee" size="30"></th>
 
-            <th> <select name="prosecutors_office" class="SelectBox">
-                <option selected disabled>Выберите Прокуратуру</option>
+            <th> <select name="prosecutors_office" id="id_prosecutors_office" class="SelectBox">
+                <option selected value="" disabled>Выберите Прокуратуру</option>
                 {% for po in po_list %}
                     <option value={{ po.id }}>{{ po }}</option>
                 {% endfor %}
@@ -27,11 +27,8 @@
         <tr>
             <th><input type="text" name="telephone" size="30"></th>
 
-            <th> <select name="department" id="id_department" class="SelectBox">
+            <th> <select name="department" id="id_department" disabled="disabled" class="SelectBox">
                 <option selected value="" disabled>Выберите Управление</option>
-                {% for department in department_list %}
-                    <option value={{ department.id }}>{{ department }}</option>
-                {% endfor %}
             </select></th>
 
 
