--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
 
 
 {% block header %}
-    <p align="right"><a href="/structure/" target="_blank">Структура</a></p>
+    <p align="right"><a href="/structure/" target="_blank" class="button">Структура</a></p>
     {% include filter_header %}
 {% endblock %}
 
