--- a/templates/filter_header.html
+++ b/templates/filter_header.html
@@ -10,7 +10,7 @@
         <tr>
             <th><input type="text" name="employee" size="30"></th>
 
-            <th> <select name="prosecutors_office" id="id_prosecutors_office" class="SelectBox">
+            <th> <select name="prosecutors_office" id="id_prosecutors_office">
                 <option selected value="" disabled>Выберите Прокуратуру</option>
                 {% for po in po_list %}
                     <option value={{ po.id }}>{{ po }}</option>
@@ -27,7 +27,7 @@
         <tr>
             <th><input type="text" name="telephone" size="30"></th>
 
-            <th> <select name="department" id="id_department" disabled="disabled" class="SelectBox">
+            <th> <select name="department" id="id_department" disabled="disabled">
                 <option selected value="" disabled>Выберите Управление</option>
             </select></th>
 
@@ -42,7 +42,7 @@
             <th></th>
 
 
-            <th> <select name="division" id="id_division" disabled="disabled" class="SelectBox">
+            <th> <select name="division" id="id_division" disabled="disabled">
                 <option selected disabled>Выберите Отдел</option>
             </select></th>
 
